crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_duplicate_option_value.stderr
error: a bound select cannot contain an option with duplicate `value` attributes
  --> tests/ui/page/fail/controlled_bind_duplicate_option_value.rs:10:10
   |
10 |             bind: selected,
   |                   ^^^^^^^^
